finish CRUD ADS
